fixed overflow bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 /* Body */
 body {
     font-family: 'Nerko One', cursive;
+    overflow: visible;
 }
 
 /* Header */
